k8s/analytics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: coinkeeper
spec:
  replicas: 2
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: coinkeeper-analytics-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: coinkeeper
spec:
  selector:
    app: analytics-service
  ports:
    - port: 5005
      targetPort: 5005
      protocol: TCP
  type: ClusterIP
