k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: coinkeeper
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: coinkeeper-auth:v2
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: coinkeeper
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 5002
      targetPort: 5002
  type: ClusterIP
