k8s/expense.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-service
  namespace: coinkeeper
  labels:
    app: expense-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-service
  template:
    metadata:
      labels:
        app: expense-service
    spec:
      containers:
        - name: expense-service
          image: coinkeeper-expense:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: expense-service
  namespace: coinkeeper
  labels:
    app: expense-service
spec:
  selector:
    app: expense-service
  ports:
    - name: http
      port: 5003
      targetPort: 5003
  type: ClusterIP
